--- a/data/config.yaml
+++ b/data/config.yaml
@@ -1,4 +1,4 @@
-name: Jacky Zhao
+name: Jinhai Yan
 enableToc: true
 openToc: false
 enableLinkPreview: true
@@ -23,7 +23,5 @@ description:
 page_title:
   "🪴 Quartz 3.3"
 links:
-  - link_name: Twitter
-    link: https://twitter.com/_jzhao
   - link_name: Github
-    link: https://github.com/jackyzha0
+    link: https://github.com/yanjinhai
